Bug fix - Differentiate overflow properties as x is being overwritten by y

--- a/src/main/assets/scss/main.scss
+++ b/src/main/assets/scss/main.scss
@@ -466,8 +466,8 @@ div {
 }
 
 .overflow-table {
-    overflow: auto;
-    overflow: hidden;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 // Admin css
